--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,51 @@ th {
 
 th, td {
     border: 2px solid black;
-    font-size: 30px;
+    font-size: 50px;
     text-align: center;
+}
+
+/* Form styling */
+.form-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 30px;
+}
+.dropdown, .button-submit, label {
+    font-size: 30px;
+    font-family: Arial;
+    color: black;
+    height: 50px;
+    padding: 0 20px;
+}
+
+.dropdown, .button-submit {
+    cursor: pointer;
+}
+
+.button-submit, label {
+   font-weight: bold;
+}
+
+.dropdown, label {
+    background-color: white;
+}
+
+.dropdown {
+    border: 1px solid black;
+}
+
+.button-submit {
+    background-color: #b4b4b4;
+    border: 2px solid black;
+}
+
+label {
+    font-weight: bold;
+    color: black;
+    font-family: Arial;
+    display: flex;
+    align-items: center;
+    height: 50px;
 }
