--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,20 @@ h1 {
 h2 {
     font-family: Arial, sans-serif;
     text-align: center;
-    font-size: 30px;
+    font-size: 45px;
+    position: sticky;
+    top: 0;
+    border-bottom: 1px solid lightgrey;
+    padding: 10px;
+    background-color: white;
+    margin: 0;
+    z-index: 10;
 }
 
 /* Table styling */
 table {
     font-family: Arial, sans-serif;
+    font-size: 30px;
     margin: auto;
     border-collapse: collapse;
     width: auto;
@@ -30,14 +38,42 @@ table {
     background: white;
 }
 
+th, td {
+    border: 2px solid black;
+    padding: 10px;
+}
+
+td {
+    height: 10px;
+    width: auto;
+}
+
 th {
+    background-color: #40ff47;
+    color: black;
+    position: sticky;
+    top: 55px;
+    padding: 10px;
+    z-index: 10;
+}
+
+/* 1. Spalte (Rank) in allen Tabellen formatieren */
+table td:nth-child(1), table th:nth-child(1) {
+    text-align: center;
+    color: black;
+    background-color: #40ff47;
     font-weight: bold;
 }
 
-th, td {
-    border: 2px solid black;
-    font-size: 50px;
-    text-align: center;
+/* 2. Spalte (Titel) in allen Tabellen formatieren */
+table td:nth-child(2), table th:nth-child(2) {
+    text-align: left;
+}
+
+/* 3. Spalte (Streams) und 4. Spalte (Daily) in allen Tabellen formatieren */
+table td:nth-child(3), table th:nth-child(3),
+table td:nth-child(4), table th:nth-child(4) {
+    text-align: left;
 }
 
 /* Form styling */
@@ -47,6 +83,7 @@ th, td {
     gap: 20px;
     margin-bottom: 30px;
 }
+
 .dropdown, .button-submit, label {
     font-size: 30px;
     font-family: Arial;
